fix: Limit thread pool size to 2 for cert id search
[#OCD-4928]